깃 이그노어 소나린트 무시

--- a/.gitignore
+++ b/.gitignore
@@ -90,6 +90,7 @@ fabric.properties
 # https://plugins.jetbrains.com/plugin/7973-sonarlint
 .idea/**/sonarlint/
 .idea/sonarlint/
+**/.idea/sonarlint/
 
 # SonarQube Plugin
 # https://plugins.jetbrains.com/plugin/7238-sonarqube-community-plugin
