--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/java,windows,macos,intellij
-# Edit at https://www.toptal.com/developers/gitignore?templates=java,windows,macos,intellij
+# Created by https://www.toptal.com/developers/gitignore/api/windows,intellij,macos,gradle,sonar,java
+# Edit at https://www.toptal.com/developers/gitignore?templates=windows,intellij,macos,gradle,sonar,java
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -81,7 +81,7 @@ fabric.properties
 ### Intellij Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
-*.iml
+# *.iml
 # modules.xml
 # .idea/misc.xml
 # *.ipr
@@ -89,8 +89,6 @@ fabric.properties
 # Sonarlint plugin
 # https://plugins.jetbrains.com/plugin/7973-sonarlint
 .idea/**/sonarlint/
-.idea/sonarlint/
-**/.idea/sonarlint/
 
 # SonarQube Plugin
 # https://plugins.jetbrains.com/plugin/7238-sonarqube-community-plugin
@@ -164,6 +162,10 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+### Sonar ###
+#Sonar generated dir
+/.sonar/
+
 ### Windows ###
 # Windows thumbnail cache files
 Thumbs.db
@@ -190,4 +192,29 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/java,windows,macos,intellij
+### Gradle ###
+.gradle
+build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
+
+### Gradle Patch ###
+**/build/
+
+# Eclipse Gradle plugin generated files
+# Eclipse Core
+.project
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+
+# End of https://www.toptal.com/developers/gitignore/api/windows,intellij,macos,gradle,sonar,java
