Awt 공부중.. (event)
event 까지 하고있는중

--- a/Day16/awt/build.gradle
+++ b/Day16/awt/build.gradle
@@ -10,8 +10,13 @@ repositories {
 }
 
 compileJava.options.encoding = 'UTF-8'
+
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
+}
+
+tasks.withType(JavaCompile){
+    options.encoding = "UTF-8"
 }
 
 dependencies {
