--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,8 @@
 
 # Gradle
 .idea/**/gradle.xml
+**/gradle.xml
+**/.idea/sonarlint/
 .idea/**/libraries
 
 # Gradle and Maven with auto-import
@@ -89,7 +91,9 @@ fabric.properties
 # Sonarlint plugin
 # https://plugins.jetbrains.com/plugin/7973-sonarlint
 .idea/**/sonarlint/
-**/.idea/**/sonarlint/
+*/.idea/**/sonarlint/
+**/.idea/sonarlint/issuesotre/
+
 
 # SonarQube Plugin
 # https://plugins.jetbrains.com/plugin/7238-sonarqube-community-plugin
@@ -212,10 +216,17 @@ gradle-app.setting
 ### Gradle Patch ###
 **/build/
 
+
 # Eclipse Gradle plugin generated files
 # Eclipse Core
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+
+Day16/awt/.idea/gradle.xml
+Day16/awt/.idea/sonarlint/
+
+
+
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,intellij,macos,gradle,sonar,java
