--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/windows,intellij,macos,gradle,sonar,java
-# Edit at https://www.toptal.com/developers/gitignore?templates=windows,intellij,macos,gradle,sonar,java
+# Created by https://www.toptal.com/developers/gitignore/api/windows,intellij+all,sonarqube,java
+# Edit at https://www.toptal.com/developers/gitignore?templates=windows,intellij+all,sonarqube,java
 
-### Intellij ###
+### Intellij+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
@@ -13,11 +13,19 @@
 .idea/**/dictionaries
 .idea/**/shelf
 
+**/.idea/**/workspace.xml
+**/.idea/**/tasks.xml
+**/.idea/**/usage.statistics.xml
+**/.idea/**/dictionaries
+**/.idea/**/shelf
+
 # AWS User-specific
 .idea/**/aws.xml
+**/.idea/**/aws.xml
 
 # Generated files
 .idea/**/contentModel.xml
+**/.idea/**/contentModel.xml
 
 # Sensitive or high-churn files
 .idea/**/dataSources/
@@ -28,11 +36,21 @@
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
 
+**/.idea/**/dataSources/
+**/.idea/**/dataSources.ids
+**/.idea/**/dataSources.local.xml
+**/.idea/**/sqlDataSources.xml
+**/.idea/**/dynamic.xml
+**/.idea/**/uiDesigner.xml
+**/.idea/**/dbnavigator.xml
+
 # Gradle
 .idea/**/gradle.xml
-**/gradle.xml
-**/.idea/sonarlint/
 .idea/**/libraries
+
+**/.idea/**/gradle.xml
+**/.idea/**/libraries
+
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
@@ -58,15 +76,18 @@ cmake-build-*/
 
 # IntelliJ
 out/
+**/out/
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
+**/.idea_modules/
 
 # JIRA plugin
 atlassian-ide-plugin.xml
 
 # Cursive Clojure plugin
 .idea/replstate.xml
+**/.idea/replstate.xml
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
@@ -76,49 +97,36 @@ fabric.properties
 
 # Editor-based Rest Client
 .idea/httpRequests
+**/.idea/httpRequests
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+**/.idea/caches/build_file_checksums.ser
 
-### Intellij Patch ###
-# Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
-# *.iml
-# modules.xml
-# .idea/misc.xml
-# *.ipr
+*.iml
+modules.xml
+.idea/misc.xml
+*.ipr
+
+**/*.iml
+**/modules.xml
+**/.idea/misc.xml
+**/*.ipr
 
 # Sonarlint plugin
-# https://plugins.jetbrains.com/plugin/7973-sonarlint
-.idea/**/sonarlint/
-*/.idea/**/sonarlint/
-**/.idea/sonarlint/issuesotre/
-
-
-# SonarQube Plugin
-# https://plugins.jetbrains.com/plugin/7238-sonarqube-community-plugin
-.idea/**/sonarIssues.xml
-
-# Markdown Navigator plugin
-# https://plugins.jetbrains.com/plugin/7896-markdown-navigator-enhanced
-.idea/**/markdown-navigator.xml
-.idea/**/markdown-navigator-enh.xml
-.idea/**/markdown-navigator/
-
-# Cache file creation bug
-# See https://youtrack.jetbrains.com/issue/JBR-2257
-.idea/$CACHE_FILE$
-
-# CodeStream plugin
-# https://plugins.jetbrains.com/plugin/12206-codestream
-.idea/codestream.xml
+.idea/sonarlint
+**/.idea/sonarlint
+**/.idea/sonarlint/
 
 ### Java ###
 # Compiled class file
 *.class
+**/*.class
 
 # Log file
 *.log
+**/*.log
 
 # BlueJ files
 *.ctxt
@@ -138,38 +146,19 @@ fabric.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-### macOS ###
-# General
-.DS_Store
-.AppleDouble
-.LSOverride
+### SonarQube ###
+# SonarQube ignore files.
+#
+# https://docs.sonarqube.org/display/SCAN/Analyzing+with+SonarQube+Scanner
+# Sonar Scanner working directories
+.sonar/
+.sonarqube/
+.scannerwork/
 
-# Icon must end with two \r
-Icon
-
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-### Sonar ###
-#Sonar generated dir
-/.sonar/
+# http://www.sonarlint.org/commandline/
+# SonarLint working directories, configuration files (including credentials)
+.sonarlint/
+**/.sonarlint/
 
 ### Windows ###
 # Windows thumbnail cache files
@@ -197,36 +186,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-### Gradle ###
-.gradle
-build/
-
-# Ignore Gradle GUI config
-gradle-app.setting
-
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
-
-# Cache of project
-.gradletasknamecache
-
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
-
-### Gradle Patch ###
-**/build/
-
-
-# Eclipse Gradle plugin generated files
-# Eclipse Core
-.project
-# JDT-specific (Eclipse Java Development Tools)
-.classpath
-
-Day16/awt/.idea/gradle.xml
-Day16/awt/.idea/sonarlint/
-
-
-
-
-# End of https://www.toptal.com/developers/gitignore/api/windows,intellij,macos,gradle,sonar,java
+# End of https://www.toptal.com/developers/gitignore/api/windows,intellij+all,sonarqube,java
