--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
+**/.idea/**/uiDesigner.xml
 
 # Gradle
 .idea/**/gradle.xml
